SENG-982 Embed default discovery auth